--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
     -o $GOPATH/bin/dep
   - chmod +x $GOPATH/bin/dep
 install:
-  - dep ensure
+  - $GOPATH/bin/dep ensure
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
 script:
