--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ install:
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
 script:
-  - go test -v -covermode=count -coverprofile=coverage.out
+  - go test -v ./... -covermode=count -coverprofile=coverage.out
 after_success:
   - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
