--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,9 @@
 
 [[constraint]]
   name = "github.com/mmcdole/gofeed"
-  version = "1.0.0-beta2"
+  branch = "master"
+
+  source = "https://github.com/mmcdole/gofeed.git"
 
 [prune]
   go-tests = true
