--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,3 +34,8 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[metadata.heroku]
+  root-package = "github.com/shhj1998/rss-search-api"
+  go-version = "1.12.6"
+  install = ["./..."]
