--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,8 +27,15 @@
 
 [[constraint]]
   name = "github.com/mmcdole/gofeed"
-  version = "1.0.0-beta2"
+  branch = "master"
+
+  source = "https://github.com/mmcdole/gofeed.git"
 
 [prune]
   go-tests = true
   unused-packages = true
+
+[metadata.heroku]
+  root-package = "github.com/shhj1998/rss-search-api"
+  go-version = "1.12.6"
+  install = ["./..."]
