--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -39,3 +39,6 @@
   root-package = "github.com/shhj1998/rss-search-api"
   go-version = "1.12.6"
   install = ["./..."]
+[[constraint]]
+  name = "github.com/DATA-DOG/go-sqlmock"
+  version = "1.3.3"
