--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,3 +42,7 @@
 [[constraint]]
   name = "github.com/DATA-DOG/go-sqlmock"
   version = "1.3.3"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.3.0"
