--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,3 +20,7 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.3.0"
+
+[[constraint]]
+  name = "github.com/google/logger"
+  version = "1.0.1"
